--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,15 @@ social:
 analytics:
   provider               : "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "UA-71657172-3" # IMPORTANT: If you clone this repo, please change the tracking id!
+    tracking_id          : <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CVHEZSHXGS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CVHEZSHXGS');
+</script>
     anonymize_ip         : # true, false (default)
 
 
