--- a/_config.yml
+++ b/_config.yml
@@ -97,15 +97,7 @@ social:
 analytics:
   provider               : "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CVHEZSHXGS"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-CVHEZSHXGS');
-</script>
+    tracking_id          : #
     anonymize_ip         : # true, false (default)
 
 
