--- a/_config.yml
+++ b/_config.yml
@@ -143,9 +143,9 @@ author:
     - label: "Apple Podcasts"
       icon: "fas fa-fw fa-podcast"
       url: "https://podcasts.apple.com/us/podcast/sucias-are-my-favorite/id1548173787"
-    - label: "Pocket Casts"
+    - label: "Anchor"
       icon: "fas fa-fw fa-microphone-alt"
-      url: "https://pca.st/vq8ml6pl"
+      url: "https://anchor.fm/sucias"
 
 
 # Reading Files
