--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,18 @@ author:
 # Reading Files
 include:
   - _pages
+  
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/  
 
 # Conversion
 markdown: kramdown
